Assessment5/force-app/main/default/objects/MessagingSession/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Visitor Email captured from Pre-Chat Form</description>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>