Assessment5/force-app/main/default/objects/MessagingSession/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Visitor Last Name captured from Pre-Chat Form</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>