Assessment5/force-app/main/default/objects/MessagingSession/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <description>Query Type captured from Pre-Chat Form</description>
    <label>Query Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>